# super-mario-project

./: .gitignore  README.md
.github/: issue-branch.yml
agent/: pyproject.toml
agent/DQN Agents/: mario.py  run_mario.py  train_mario.py  utils.py
agent/DQN_agent/: model.py  test.py  train.py  utils.py
agent/PPO Agent/: analyse.py  train.py
agent/Q_learning/: test_v1.py
agent/Rule Based Agents/: lauren_gee_locate_objects.py  rule_based_v1.py  rule_based_v2.py  rule_based_v3.py
agent/agent/: app.py  info_model_512.txt  model.py  requirements.txt
agent/locate_objects/mario_locate_objects/: human_vs_agent.py  lauren_gee_locate_objects.py  manual_mario.py  mario_agent_refactor.py  mario_agent_refactor_v2.py  mario_agent_v1.py  mario_agent_v2.py  mario_agent_v3.py  mario_locate_objects.py  rule_based_agent_v3.py  rule_based_agent_v4.py  rule_based_agent_v5.py  rule_based_agent_v6.py  rule_based_v3_visualisation.py  test_render_to_screen.py  visualisation_graphs.py
agent/modified_DQN_agent_v1/: mario_agent.py  mario_visualise.py  run_agent.py  run_agent_visualise.py  train_agent.py
agent/modified_dqn_agent_v2/: mario.py
